fixed brush overflowing width

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ a#scroll-btn {
 	right: 0;
 	bottom: 10px;
 	border-radius: 3em;
+	transform: translateX(-50%);
 }
 a#scroll-btn:before{
 	position: absolute;
@@ -405,12 +406,6 @@ _:-ms-lang(x), .js-scroll a::before{
   }
   
   /* Brush scroll animation */
-@media only screen and (min-width: 648px) {
-	.brush__container {
-		width: 320px;
-		overflow: hidden;
-	}
-}
 
 .brush_1,
 .brush_2,
@@ -592,10 +587,10 @@ _:-ms-lang(x), .js-scroll a::before{
 	  transform: translate3d(0px, 0px, 0px) rotate(0deg);
 	}
 	25% {
-	  transform: translate3d(-30px, 0px, 0px) rotate(-10deg);
+	  transform: translate3d(-60px, 0px, 0px) rotate(-10deg);
 	}
 	75% {
-	  transform: translate3d(30px, 0px, 0px) rotate(10deg);
+	  transform: translate3d(60px, 0px, 0px) rotate(10deg);
 	}
 	to {
 	  transform: translate3d(0px, 0px, 0px) rotate(0deg);
@@ -607,10 +602,10 @@ _:-ms-lang(x), .js-scroll a::before{
 	  transform: translate3d(0px, 0px, 0px) rotate(0deg);
 	}
 	25% {
-	  transform: translate3d(-40px, 0px, 0px) rotate(-30deg);
+	  transform: translate3d(-90px, 0px, 0px) rotate(-30deg);
 	}
 	75% {
-	  transform: translate3d(40px, 0px, 0px) rotate(30deg);
+	  transform: translate3d(90px, 0px, 0px) rotate(30deg);
 	}
 	to {
 	  transform: translate3d(0px, 0px, 0px) rotate(0deg);
@@ -1132,6 +1127,8 @@ a:active {
 	margin: 0 auto;
 }
 main {
+	position: relative;
+	overflow: hidden;
 	margin-top: 70px;
 }
 
